--- a/OpenCRM.Web/Pages/Qr.cshtml
+++ b/OpenCRM.Web/Pages/Qr.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<render-mode ="ServerPrerendered" param-links="Model.Links" />
-
-<div class="text-center" style="height: 830px; overflow-y: scroll;>
-    <div class="row justify-content-center">
+<div class="text-center">
+    <div class="row justify-content-center  table-responsive" style="height: 80vh">
         <div class="card border-1 rounded-lg p-0">
         <h1>QR Generator</h1>
         <div class="card-body">
@@ -27,7 +25,7 @@
             <div class="text-center">
                 <br />
                 <h1>QR Code</h1>
-                <img alt="QR Code" class="img-responsive" src="data:image/png;base64,@Model.QrCode" />
+                    <img alt="QR Code" class="img-responsive" style="height: 80vh; overflow-y: scroll" src="data:image/png;base64,@Model.QrCode" />
                 <br />
                 <br />
                 <a href="#" onclick="downloadQRCode()" class="btn btn-primary mb-2">Download QR code</a>
