--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
@@ -17,15 +17,20 @@
                         <span asp-validation-for="Key" class="text-danger"></span>
                     </div>
 
-                    @for (int i = 0; i < Model.Translations.Count(); i++)
+                    @if (Model.Translations != null)
                     {
-                        <div class="form-floating mb-3">
-                            <input asp-for="@Model.Translations[i].Translation" class="form-control" placeholder="@Model.Translations[i].LanguageCode" />
-                            <label asp-for="@Model.Translations[i].Translation" class="control-label">@Model.Translations[i].LanguageCode</label>
-                            <input asp-for="@Model.Translations[i].ID" class="form-control" hidden />
-                            <input asp-for="@Model.Translations[i].LanguageId" class="form-control" hidden />
-                            <span asp-validation-for="@Model.Translations[i].Translation" class="text-danger"></span>
-                        </div>
+                        @for (int i = 0; i < Model.Translations.Count(); i++)
+                        {
+                            <div class="form-floating mb-3">
+                                <input asp-for="@Model.Translations[i].Translation" class="form-control" placeholder="@Model.Translations[i].LanguageCode" />
+                                <label asp-for="@Model.Translations[i].Translation" class="control-label">@Model.Translations[i].LanguageCode</label>
+                                <input asp-for="@Model.Translations[i].ID" class="form-control" hidden />
+                                <input asp-for="@Model.Translations[i].Key" class="form-control" hidden />
+                                <input asp-for="@Model.Translations[i].LanguageId" class="form-control" hidden />
+                                <input asp-for="@Model.Translations[i].LanguageCode" class="form-control" hidden />
+                                <span asp-validation-for="@Model.Translations[i].Translation" class="text-danger"></span>
+                            </div>
+                        }
                     }
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
