fix details QR code generator.

--- a/OpenCRM.Web/Pages/Qr.cshtml
+++ b/OpenCRM.Web/Pages/Qr.cshtml
@@ -16,7 +16,7 @@
                     <input type="text" class="form-control" id="texto" name="texto" placeholder="Enter the text" required>
                     <span validation-for="name" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Generate QR code</button>
+                <button type="submit" class="btn btn-primary mb-2">Generate QR Code</button>
             </form>
         </div>        
 
@@ -28,7 +28,7 @@
                     <img alt="QR Code" class="img-responsive" style="height: 80vh; overflow-y: scroll" src="data:image/png;base64,@Model.QrCode" />
                 <br />
                 <br />
-                <a href="#" onclick="downloadQRCode()" class="btn btn-primary mb-2">Download QR code</a>
+                <a href="#" onclick="downloadQRCode()" class="btn btn-primary mb-2">Download QR Code</a>
             </div>
         }
         </div>
